--- a/views/builder.ejs
+++ b/views/builder.ejs
@@ -53,7 +53,10 @@
                     <label for="name" class="text-sm">Name</label>
                     <input type="text" id="name" name="name" placeholder="Enter your full name"
                         class="w-72 bg-zinc-700 text-gray-400 px-3 py-2 border border-zinc-600 rounded-lg focus:outline-none focus:border-zinc-400">
-                    <label for="about" class="text-sm">About</label>
+                    <label for="oneliner" class="text-sm">Onliner</label>
+                    <input type="text" id="oneliner" name="oneliner" placeholder="Enter oneliner (eg. web devloper & designer)"
+                        class="w-72 bg-zinc-700 text-gray-400 px-3 py-2 border border-zinc-600 rounded-lg focus:outline-none focus:border-zinc-400">
+                    <label for="about" class="text-sm">Description</label>
                     <textarea id="about" name="about" placeholder="What describes you best?"
                         class="resize-none w-full bg-zinc-700 text-gray-400 px-3 py-2 border border-zinc-600 rounded-lg focus:outline-none focus:border-zinc-400"></textarea>
                 </div>
@@ -188,7 +191,7 @@
                     <div class="flex items-center gap-2">
                         <label for="username_<%= index %>" class="text-sm"><%= platform %></label>
                         <input type="text" id="username_<%= index %>" name="platforms[<%= index %>].username"
-                            placeholder="Enter username for <%= platform %>"
+                            placeholder="Enter link of <%= platform %>"
                             class="w-72 bg-zinc-700 text-gray-400 px-3 py-2 border border-zinc-600 rounded-lg focus:outline-none focus:border-zinc-400">
                         <input type="hidden" name="platforms[<%= index %>].platform" value="<%= platform %>">
                     </div>
