--- a/views/builder.ejs
+++ b/views/builder.ejs
@@ -53,7 +53,7 @@
                     <label for="name" class="text-sm">Name</label>
                     <input type="text" id="name" name="name" placeholder="Enter your full name"
                         class="w-72 bg-zinc-700 text-gray-400 px-3 py-2 border border-zinc-600 rounded-lg focus:outline-none focus:border-zinc-400">
-                    <label for="oneliner" class="text-sm">Onliner</label>
+                    <label for="oneliner" class="text-sm">Oneliner</label>
                     <input type="text" id="oneliner" name="oneliner" placeholder="Enter oneliner (eg. web devloper & designer)"
                         class="w-72 bg-zinc-700 text-gray-400 px-3 py-2 border border-zinc-600 rounded-lg focus:outline-none focus:border-zinc-400">
                     <label for="about" class="text-sm">Description</label>
