--- a/views/portfolio.ejs
+++ b/views/portfolio.ejs
@@ -71,8 +71,8 @@
 <body class="bg-gray-900 text-gray-100 px-10">
   <!-- Header -->
   <header class="text-white py-6 mb-6 flex justify-between">
-    <a href="" class="text-lg">J.D. Portfolio</a>
-    <div class="flex gap-4">
+    <a href="" class="text-lg font-semibold">J.D. Portfolio</a>
+    <div class="flex gap-4 font-semibold">
       <a href="#projects">Projects</a>
       <a href="#technical-skills">Skills</a>
       <a href="#platforms">Connect</a>
@@ -198,11 +198,11 @@
 
     <!-- Platforms -->
     <section id="platforms" class="bg-gray-800 px-6 py-6 rounded-lg hover-effect mb-6">
-      <h2 class="text-2xl font-semibold mb-4 text-transparent bg-clip-text bg-gradient-to-r from-purple-400 via-pink-500 to-blue-500">
+      <h2 class="text-2xl font-bold mb-4 text-transparent bg-clip-text bg-gradient-to-r from-purple-400 via-pink-500 to-blue-500">
         Platforms
       </h2>
       <% if (user.platforms.length > 0) { %>
-        <div class="flex flex-wrap gap-3">
+        <div class="flex items-center justify-center flex-wrap gap-3">
           <% user.platforms.forEach(platform => { %>
             <a href="<%= platform.username %>" class="bg-gray-700 px-4 py-2 rounded-full text-sm font-medium hover:bg-gray-600 border border-gray-400 hover:border-gradient-to-r from-purple-400 via-pink-500 to-blue-500 transition-all duration-300" target="_blank">
                 <strong><%= platform.platform %></strong>
@@ -222,7 +222,7 @@
     <!-- Footer -->
     <footer class="bg-gray-800 text-gray-300 py-6">
       <div class="container mx-auto flex flex-col items-center gap-4 px-4">
-        <a href="edit/<%= user.name %>" class="bg-gradient-to-r from-purple-400 via-pink-500 to-blue-500 text-white px-4 py-2 rounded-full hover:opacity-80 transition-opacity duration-300">Edit</a>
+        <a href="edit/<%= user.name %>" class="text-sm font-bold bg-gradient-to-r from-purple-400 via-pink-500 to-blue-500 text-white px-4 py-2 rounded-full hover:opacity-80 transition-opacity duration-300">Modify</a>
       </div>
     </footer>
   </main>
