--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -43,7 +43,7 @@
                 <legend class="font-bold text-sm px-1.5 py-1 bg-green-600 rounded-lg">Profile Picture</legend>
                 <div class="profilepic">
                     <label for="image" class="text-sm font-semibold text-white px-1">Profile Picture</label>
-                    <input type="file" name="image" id="image" placeholder="Choose a profile picture" class="outline-none px-4 py-2 text-sm bg-zinc-700 w-full rounded placeholder:text-zinc-300 focus:ring-2 focus:ring-blue-500">    
+                    <input type="file" name="profilepic" id="image" placeholder="Choose a profile picture" class="outline-none px-4 py-2 text-sm bg-zinc-700 w-full rounded placeholder:text-zinc-300 focus:ring-2 focus:ring-blue-500">    
                 </div>
             </fieldset>
             
